--- a/gh-pages-site/package.json
+++ b/gh-pages-site/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
