--- a/gh-pages-site/package.json
+++ b/gh-pages-site/package.json
@@ -23,7 +23,7 @@
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1"
   },
   "keywords": [
     "gatsby"
