--- a/gh-pages-site/package.json
+++ b/gh-pages-site/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-graphql": "^3.10.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "gh-pages": "^3.1.0",
     "prop-types": "^15.7.2",
@@ -23,6 +24,7 @@
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
+    "gatsby-source-github": "^0.0.2",
     "prettier": "^2.2.1"
   },
   "keywords": [
